k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-svc
  namespace: elysian-dev
  labels:
    app.kubernetes.io/name: account-svc
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/part-of: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: account-svc
      app.kubernetes.io/version: "0.1"
      app.kubernetes.io/part-of: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: account-svc
        app.kubernetes.io/version: "0.1"
        app.kubernetes.io/part-of: backend
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: web-pool
      containers:
        - name: account-svc
          image: gcr.io/GCP_PROJ/elysian/account-svc
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8080
