k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-svc
  namespace: elysian-dev
  labels:
    app.kubernetes.io/name: account-svc
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/part-of: backend
spec:
  ports:
    - protocol: TCP
      name: tcp-80
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: account-svc
