k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: acccount-svc
  namespace: elysian-dev
  labels:
    app.kubernetes.io/name: account-svc
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/part-of: front
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: k8s.debray.dev
      http:
        paths:
          - path: /api/v1/account
            backend:
              serviceName: account-svc
              servicePort: 80
          - path: /api/v1/auth
            backend:
              serviceName: account-svc
              servicePort: 80
